Remove react-select, replace with our SimpleDropdown

--- a/ui/app/css/itcss/components/simple-dropdown.scss
+++ b/ui/app/css/itcss/components/simple-dropdown.scss
@@ -26,14 +26,13 @@
 .simple-dropdown__options {
   z-index: 1050;
   position: absolute;
-  height: 220px;
+  max-height: 220px;
   width: 100%;
   border: 1px solid #d2d8dd;
   border-radius: 4px;
   background-color: #fff;
   -webkit-box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.11);
   box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.11);
-  margin-top: 10px;
   overflow-y: scroll;
   left: 0;
   top: 100%;
