Use Dropdown instead of SimpleDropdown

--- a/ui/app/pages/create-account/import-account/index.scss
+++ b/ui/app/pages/create-account/import-account/index.scss
@@ -28,7 +28,7 @@
     color: $scorpion;
   }
 
-  .simple-dropdown {
+  &__select {
     width: 210px;
     display: flex;
     align-items: center;
