feat(keystone): support usb connection

--- a/ui/pages/pages.scss
+++ b/ui/pages/pages.scss
@@ -10,6 +10,7 @@
 @import 'connected-sites/index';
 @import 'create-account/create-account';
 @import 'create-account/connect-hardware/index';
+@import 'keystone/keystone';
 @import 'error-page/index';
 @import 'home/index';
 @import 'keychains/index';
