fix: JIRA-759, 760, 765, 754, 756 cp-13.10.0 (#37848)
<!--
Please submit this PR as a draft initially.
Do not mark it as "Ready for review" until the template has been
completely filled out, and PR status checks have passed at least once.
-->

## **Description**

<!--
Write a short description of the changes included in this pull request,
also include relevant motivation and context. Have in mind the following
questions:
1. What is the reason for the change?
2. What is the improvement/solution?
-->

In this PR, Updated Transaction Shield UI Bugs.

Jira Link: 
- https://consensyssoftware.atlassian.net/browse/SUBS-759
- https://consensyssoftware.atlassian.net/browse/SUBS-760
- https://consensyssoftware.atlassian.net/browse/SUBS-765
- https://consensyssoftware.atlassian.net/browse/SUBS-754
- https://consensyssoftware.atlassian.net/browse/SUBS-756


Figma Link: 
-
https://www.figma.com/design/HTAO1SrmixV4ppv7qIvLoa/Metamask-Transaction-Shield?node-id=14740-209891&m=dev
-
https://www.figma.com/design/agblIyQvyxSoqGMjQDAPBK/Transaction-Shield?node-id=277-14&p=f&t=apuyU6XgEuw694p7-0

[![Open in GitHub
Codespaces](https://github.com/codespaces/badge.svg)](https://codespaces.new/MetaMask/metamask-extension/pull/37722?quickstart=1)

## **Changelog**

<!--
If this PR is not End-User-Facing and should not show up in the
CHANGELOG, you can choose to either:
1. Write `CHANGELOG entry: null`
2. Label with `no-changelog`

If this PR is End-User-Facing, please write a short User-Facing
description in the past tense like:
`CHANGELOG entry: Added a new tab for users to see their NFTs`
`CHANGELOG entry: Fixed a bug that was causing some NFTs to flicker`

(This helps the Release Engineer do their job more quickly and
accurately)
-->

CHANGELOG entry: Used feature flag to only show this change when
sidepanel flag is enabled for chrome. Updated button on wallet creation
successful page from 'Done' to 'Open wallet'.

## **Related issues**

Fixes:

## **Manual testing steps**

1. Open exten

--- a/ui/pages/settings/index.scss
+++ b/ui/pages/settings/index.scss
@@ -397,7 +397,9 @@
 
         &__modules {
           @include design-system.screen-sm-max {
-            display: block;
+            display: flex;
+            flex-flow: column;
+            overflow-y: auto;
           }
         }
       }
@@ -547,7 +549,8 @@
     }
 
     .settings-page__content__modules {
-      display: block;
+      display: flex;
+      flex-flow: column;
     }
   }
 }
