--- a/ui/components/app/shield-entry-modal/index.scss
+++ b/ui/components/app/shield-entry-modal/index.scss
@@ -4,6 +4,11 @@
   .shield-entry-modal__title {
     line-height: 1em;
     font-size: 2.25rem;
+
+    @include design-system.screen-sm-max {
+      font-size: 2rem;
+      margin-top: 16px;
+    }
   }
 
   .shield-entry-modal__content {
@@ -41,6 +46,15 @@
     &__canvas {
       height: 100%;
       width: 100%;
+    }
+  }
+
+  &-sheild-image {
+    width: 346px;
+    height: 252px;
+
+    @include design-system.screen-sm-max {
+      width: 322px;
     }
   }
 }
