fix: revert to old avatar group

--- a/ui/components/multichain-accounts/multichain-accounts.scss
+++ b/ui/components/multichain-accounts/multichain-accounts.scss
@@ -4,3 +4,4 @@
 @import "account-details-row";
 @import "add-multichain-account";
 @import "multichain-address-rows-hovered-list";
+@import "multichain-account-network-group";
