--- a/ui/components/multichain-accounts/multichain-account-network-group/index.scss
+++ b/ui/components/multichain-accounts/multichain-account-network-group/index.scss
@@ -1,13 +1,30 @@
 .multichain-account-network-group {
 
+  .mm-box--rounded-full {
+    border-radius: 4px !important;
+    border: 2px !important;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+  }
+
+  .mm-box--rounded-md {
+    border-radius: 4px !important;
+  }
+
+  .mm-box--border-width-1{
+    border-width: 0px !important;
+  }
+
   .mm-avatar-base {
-    border-radius: 4px;
-    border: 2px solid var(--color-background-default);
     background-color: var(--color-background-default) !important;
   }
 
   .mm-avatar-network__network-image {
     border-radius: 4px;
+    border-width: 2px !important;
+    border-color: var(--color-background-default) !important;
     width: 16px !important;
     height: 16px !important;
   }
