--- a/ui/pages/confirmations/components/index.scss
+++ b/ui/pages/confirmations/components/index.scss
@@ -36,5 +36,6 @@
 @import 'send/header/header';
 @import 'send/recipient/recipient';
 @import 'simulation-details/index';
+@import 'transactions/quote-swap-simulation-details/index';
 @import 'UI/asset/index';
 @import 'UI/recipient/index';
