fix: set width and height

--- a/ui/components/multichain-accounts/multichain-account-network-group/index.scss
+++ b/ui/components/multichain-accounts/multichain-account-network-group/index.scss
@@ -6,6 +6,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    width: 16px !important;
+    height: 16px !important;
     overflow: hidden;
   }
 
