fix: border color

--- a/ui/components/multichain-accounts/multichain-account-network-group/index.scss
+++ b/ui/components/multichain-accounts/multichain-account-network-group/index.scss
@@ -1,10 +1,14 @@
 .multichain-account-network-group {
+
   .mm-box--rounded-full {
     border-radius: 4px !important;
     border-width: 2px !important;
+    border-color: var(--color-background-default) !important;
     display: flex;
     align-items: center;
     justify-content: center;
+    width: 16px !important;
+    height: 16px !important;
     overflow: hidden;
   }
 
@@ -12,7 +16,7 @@
     border-radius: 4px !important;
   }
 
-  .mm-box--border-width-1 {
+  .mm-box--border-width-1{
     border-width: 0px !important;
   }
 
