fix: hover width

--- a/ui/components/multichain-accounts/multichain-address-rows-hovered-list/index.scss
+++ b/ui/components/multichain-accounts/multichain-address-rows-hovered-list/index.scss
@@ -1,9 +1,9 @@
 .multichain-address-row {
   transition: background-color 0.3s ease-in-out;
   cursor: pointer;
-  margin-left: -16;
-  margin-right: -16;
-  padding-left: 16;
-  padding-right: 16;
+  margin-left: -16px;
+  margin-right: -16px;
+  padding-left: 16px;
+  padding-right: 16px;
 }
 
