--- a/ui/components/multichain/token-list-item/index.scss
+++ b/ui/components/multichain/token-list-item/index.scss
@@ -11,4 +11,12 @@
   &__badge {
     align-self: center;
   }
+
+  &__info-icon {
+    flex-shrink: 0;
+    margin-left: 12px;
+    opacity: 1;
+    cursor: pointer;
+    align-self: center;
+  }
 }
