--- a/ui/components/multichain-accounts/multichain-account-network-group/index.scss
+++ b/ui/components/multichain-accounts/multichain-account-network-group/index.scss
@@ -1,5 +1,4 @@
 .multichain-account-network-group {
-
   .mm-box--rounded-full {
     border-radius: 4px !important;
     border-width: 2px !important;
@@ -16,8 +15,8 @@
     border-radius: 4px !important;
   }
 
-  .mm-box--border-width-1{
-    border-width: 0px !important;
+  .mm-box--border-width-1 {
+    border-width: 0 !important;
   }
 
   .mm-avatar-base {
