--- a/ui/components/multichain/app-header/index.scss
+++ b/ui/components/multichain/app-header/index.scss
@@ -10,10 +10,10 @@
   max-width: 100%;
   flex-flow: column nowrap;
   z-index: design-system.$header-z-index;
-  min-height: 68px;
+  min-height: var(--header-height);
 
   &__contents {
-    height: 68px;
+    height: var(--header-height);
 
     &__network-picker {
       max-width: 250px;
@@ -36,7 +36,7 @@
 
   &__lock-contents {
     flex-flow: row nowrap;
-    height: 68px;
+    height: var(--header-height);
 
     @include design-system.screen-sm-max {
       height: $height-screen-sm-max;
