--- a/ui/components/multichain-accounts/multichain-address-rows-hovered-list/index.scss
+++ b/ui/components/multichain-accounts/multichain-address-rows-hovered-list/index.scss
@@ -1,4 +1,4 @@
-.multichain-address-row {
+.multichain-aggregated-address-row {
   transition: background-color 0.3s ease-in-out;
   cursor: pointer;
   margin-left: -16px;
