--- a/ui/pages/settings/transaction-shield-tab/index.scss
+++ b/ui/pages/settings/transaction-shield-tab/index.scss
@@ -24,15 +24,15 @@
     }
 
     &--active {
-      background: var(--color-accent03-dark);
+      background-color: var(--color-accent03-dark);
     }
 
     &--loading {
-      background: var(--color-border-muted);
+      background-color: var(--color-border-muted);
     }
 
     &--inactive {
-      background: var(--color-background-subsection);
+      background-color: var(--color-background-subsection);
       background-size: 85px;
       background-image: url('/images/shield-membership-shadow.png');
       background-repeat: no-repeat;
