--- a/ui/pages/settings/transaction-shield-tab/index.scss
+++ b/ui/pages/settings/transaction-shield-tab/index.scss
@@ -19,10 +19,6 @@
     position: relative;
     overflow: hidden;
 
-    .transaction-shield-page__membership-text {
-      color: var(--color-accent03-light);
-    }
-
     &--active {
       background-color: var(--color-accent03-dark);
     }
@@ -32,20 +28,20 @@
     }
 
     &--inactive {
-      background-color: var(--color-background-subsection);
-      background-size: 85px;
-      background-image: url('/images/shield-membership-shadow.png');
-      background-repeat: no-repeat;
-      background-position: right -10px center;
+      background: var(--color-background-subsection) url('/images/shield-membership-shadow.png') no-repeat right -10px center / 85px;
 
       &-light {
         background-color: var(--shield-membership-inactive-light);
       }
-
-      .transaction-shield-page__membership-text {
-        color: var(--color-text-default);
-      }
     }
+  }
+
+  &__membership-text {
+    color: var(--color-accent03-light);
+  }
+
+  &__membership--inactive &__membership-text {
+    color: var(--color-text-default);
   }
 
   .warning-button:hover {
