fix: updated useTheme hook and unlock page logo

--- a/ui/pages/unlock-page/index.scss
+++ b/ui/pages/unlock-page/index.scss
@@ -29,7 +29,11 @@
       height: 180px;
 
       &--popup {
-        margin-bottom: 0;
+        margin-bottom: 24px;
+
+        @include design-system.screen-md-max {
+          margin-bottom: 0;
+        }
       }
     }
 
