--- a/ui/pages/confirmations/components/confirm/dapp-swap-comparison-banner/index.scss
+++ b/ui/pages/confirmations/components/confirm/dapp-swap-comparison-banner/index.scss
@@ -3,9 +3,6 @@ Disabling Stylelint's hex color rule here because the TypeScript migration dashb
 */
 /* stylelint-disable color-no-hex */
 .dapp-swap {
-  &_wrapper {
-    border-radius: 8px;
-  }
 
   &_rounded-button {
     border-radius: 8px;
@@ -17,14 +14,10 @@ Disabling Stylelint's hex color rule here because the TypeScript migration dashb
     }
   }
 
-  &_mm-swap-button {
-    color: var(--color-success-default);
-    width: 50%;
-
-    &:hover {
-      color: var(--color-success-default) !important;
-      text-decoration: none !important;
-    }
+  &__tabs {
+    margin-bottom: 20px;
+    margin-top: 12px;
+    border-bottom: 1px solid var(--color-border-muted);
   }
 
   &_dapp-swap-button {
@@ -39,13 +32,14 @@ Disabling Stylelint's hex color rule here because the TypeScript migration dashb
 
   &_close-button {
     position: absolute;
-    top: 0;
-    right: 0;
+    top: 6px;
+    right: 10px;
   }
 
   &_callout {
     border-radius: 8px;
     position: relative;
+    border: 1px solid var(--color-border-muted);
   }
 
   &_callout-text {
@@ -58,19 +52,13 @@ Disabling Stylelint's hex color rule here because the TypeScript migration dashb
 
   &_callout-arrow {
     position: absolute;
-    top: -12px;
+    top: -8px;
     left: 75%;
-    transform: translateX(-50%);
-    width: 0;
-    height: 0;
-  }
-
-  &_callout-arrow::before {
-    content: "";
-    position: absolute;
-    width: 24px;
-    height: 12px;
+    width: 14px;
+    height: 14px;
+    transform: translateX(-50%) rotate(45deg);
     background: var(--color-background-section);
-    clip-path: polygon(50% 0, 0 100%, 100% 100%);
+    border-left: 1px solid var(--color-border-muted);
+    border-top: 1px solid var(--color-border-muted);
   }
 }
