--- a/app/html/partials/partial-head.html
+++ b/app/html/partials/partial-head.html
@@ -2,4 +2,4 @@
 <meta name="viewport" content="<%= it?.viewport ?? "width=device-width, initial-scale=1, user-scalable=no" %>" />
 <title><%= it?.title ?? "MetaMask" %></title>
 <link rel="preload" href="/_locales/en/messages.json" as="fetch" type="application/json" crossorigin="anonymous" />
-<link rel="stylesheet" href="../ui/css/index.scss" />
+<link rel="stylesheet" href="../../../ui/css/index.scss" />
