--- a/ui/pages/shield-plan/index.scss
+++ b/ui/pages/shield-plan/index.scss
@@ -3,6 +3,14 @@
 .shield-plan-page {
   max-width: 600px;
 
+  .shield-plan-page__error-content {
+    margin-top: 120px;
+  }
+
+  .shield-plan-page__error-icon {
+    font-size: 48px;
+  }
+
   .shield-plan-page__plans {
     grid-template-columns: 1fr 1fr;
   }
