feat: update change payment button

--- a/ui/pages/settings/transaction-shield-tab/index.scss
+++ b/ui/pages/settings/transaction-shield-tab/index.scss
@@ -48,6 +48,10 @@
     color: var(--color-warning-default);
   }
 
+  .neutral-button:hover {
+    color: var(--color-text-default);
+  }
+
   &__notification-banner {
     margin-inline: 0;
 
