fix: reverted pin-extension changes

--- a/ui/pages/onboarding-flow/index.scss
+++ b/ui/pages/onboarding-flow/index.scss
@@ -6,6 +6,7 @@
 @import 'create-password/index';
 @import 'creation-successful/index';
 @import 'welcome/index';
+@import 'pin-extension/index';
 @import 'metametrics/index';
 
 .onboarding-flow {
