feat: update details and benefits

--- a/ui/pages/settings/transaction-shield-tab/index.scss
+++ b/ui/pages/settings/transaction-shield-tab/index.scss
@@ -3,21 +3,6 @@
     margin-top: 120px;
   }
 
-  &__row {
-    margin-bottom: 1px;
-
-    &:first-child {
-      border-top-left-radius: 8px;
-      border-top-right-radius: 8px;
-    }
-
-    &:last-child {
-      border-bottom-left-radius: 8px;
-      border-bottom-right-radius: 8px;
-      margin-bottom: 0;
-    }
-  }
-
   &__membership {
     height: 128px;
     position: relative;
@@ -45,6 +30,10 @@
   }
 
   &__membership--inactive &__membership-text {
+    color: var(--color-text-default);
+  }
+
+  .neutral-button:hover {
     color: var(--color-text-default);
   }
 
