feat: add rewards sign up button and fix responsive padding

--- a/ui/pages/settings/transaction-shield-tab/index.scss
+++ b/ui/pages/settings/transaction-shield-tab/index.scss
@@ -1,4 +1,8 @@
 .transaction-shield-page {
+  @include design-system.screen-sm-min {
+    padding: 16px;
+  }
+
   &__error-content {
     margin-top: 120px;
   }
