feat: added membership header

--- a/ui/pages/settings/transaction-shield-tab/index.scss
+++ b/ui/pages/settings/transaction-shield-tab/index.scss
@@ -1,25 +1,14 @@
 .transaction-shield-page {
+  @include design-system.screen-sm-min {
+    padding: 16px;
+  }
+
   &__error-content {
     margin-top: 120px;
   }
 
-  &__row {
-    margin-bottom: 1px;
-
-    &:first-child {
-      border-top-left-radius: 8px;
-      border-top-right-radius: 8px;
-    }
-
-    &:last-child {
-      border-bottom-left-radius: 8px;
-      border-bottom-right-radius: 8px;
-      margin-bottom: 0;
-    }
-  }
-
   &__membership {
-    height: 85px;
+    height: 128px;
     position: relative;
     overflow: hidden;
 
@@ -41,7 +30,7 @@
   }
 
   &__membership-text {
-    color: var(--color-accent03-light);
+    color: var(--color-accent04-light);
   }
 
   &__membership--inactive &__membership-text {
@@ -59,10 +48,10 @@
   &-shield-banner {
     &__container {
       position: absolute;
-      top: -4px;
+      top: -6px;
       right: 0;
-      height: 93px;
-      width: 93px;
+      height: 140px;
+      width: 140px;
     }
 
     &__canvas {
