--- a/ui/pages/confirmations/components/confirm/dapp-swap-comparison-banner/index.scss
+++ b/ui/pages/confirmations/components/confirm/dapp-swap-comparison-banner/index.scss
@@ -45,8 +45,8 @@ Disabling Stylelint's hex color rule here because the TypeScript migration dashb
     margin-bottom: 4px;
   }
 
-  &_text-save {
-    margin-bottom: 4px;
+  &_text-rewards {
+    color: var(--color-accent01-light);
   }
 
   &_callout-arrow {
