--- a/ui/pages/settings/transaction-shield-tab/index.scss
+++ b/ui/pages/settings/transaction-shield-tab/index.scss
@@ -89,3 +89,9 @@
 .button-row {
   min-height: 60px;
 }
+
+.manage-plan-page {
+  @include design-system.screen-sm-min {
+    padding: 16px;
+  }
+}
